Corrections throughout chapter 5 & typos/etc. throughout whole thesis.

--- a/03_background/background.tex
+++ b/03_background/background.tex
@@ -399,7 +399,7 @@ Although a cross reality system as a whole might be considered a case of mixed r
 
 %However, XR systems that allow simultaneous interaction with both of their constituent environments blur this definition; using a XR platform such as that discussed in this document, a user can transition between perceiving stimuli from each of these environments (figures \ref{virtuality-continuum-cross-reality-2} and \ref{virtuality-continuum-cross-reality-3}) in a manner that allows them to engage with each environment without becoming wholly vacant from the other.
 
-A further distinction between augmented reality and cross reality is made by consideration of Steed's primary environment concept. For an augmented reality system the primary environment is necessarily real, as augmented reality describes systems in which virtual objects are superimposed upon a view (a background) of a real environment. However for a cross reality system one could argue that the primary environment is either real or virtual, depending upon how the user interacts with the system. For the user that walks through the real environment of a cross reality system and views their unmediated surroundings (including physical actuations triggered by events within the virtual environment), one would intuitively posit that their primary environment is real. But for the user that sits in front of a computer monitor and uses an avatar to walk through the virtual environment of the same cross reality system and hence views the avatar's virtual surroundings (including visualisations of sensor data collected from the real environment), one would posit that their primary environment is virtual. Considering figures \ref{virtuality-continuum-cross-reality-2} and \ref{virtuality-continuum-cross-reality-3} again, one could say that the dashed ellipses thus represent the primary environment for a cross reality system in each of these scenarios respectively.
+A further distinction between augmented reality and cross reality is made by consideration of Steed's primary environment concept (see discussion in section \ref{milgram&kishino}). For an augmented reality system the primary environment is necessarily real, as augmented reality describes systems in which virtual objects are superimposed upon a view (a background) of a real environment. However for a cross reality system one could argue that the primary environment is either real or virtual, depending upon how the user interacts with the system. For the user that walks through the real environment of a cross reality system and views their unmediated surroundings (including physical actuations triggered by events within the virtual environment), one would intuitively posit that their primary environment is real. But for the user that sits in front of a computer monitor and uses an avatar to walk through the virtual environment of the same cross reality system and hence views the avatar's virtual surroundings (including visualisations of sensor data collected from the real environment), one would posit that their primary environment is virtual. Considering figures \ref{virtuality-continuum-cross-reality-2} and \ref{virtuality-continuum-cross-reality-3} again, one could say that the dashed ellipses thus represent the primary environment for a cross reality system in each of these scenarios respectively.
 
 In relation to the vacancy problem, in scenarios wherein interaction with both real and virtual content is desirable but for which a complete virtual environment is not required, augmented reality circumvents the vacancy problem by virtue of presenting a single mixed reality environment to the user. However for scenarios wherein the use of a complete virtual environment is either beneficial or outright required, the vacancy problem must be mitigated to allow for constructive interaction with these two discrete environments; as is the aim of the cross reality paradigm.
 
@@ -557,11 +557,16 @@ Waterworth and Waterworth present the \textit{three dimensions of virtual experi
 	\end{center}	
 \end{figure}
 
-In the three dimensions of virtual experience model the \textit{locus of attention} axis represents the environment where the stimuli that the user is perceiving originate from; the \textit{focus of attention} axis represents the balance between conceptual/abstract reasoning and perceptual/concrete processing, where complex conceptual reasoning (or `distraction' from percepts~\cite{Chalmers2014}) results in little attention being paid to processing environmental percepts (whether originating from real stimuli, virtual stimuli, or a mix) thus reducing presence\presencefootnote{} in that environment toward its antithesis $-$ absence\absencefootnote{}; and the \textit{sensus of attention} axis represents the level of conscious arousal (or `wakefulness'~\cite{Laureys2009}) of the user, whether directed toward percepts originating from real stimuli, virtual stimuli, a mix of both, or not directed toward any percepts in the case of completely `absent' conceptual reasoning, a concept clarified by the authors:
+In the three dimensions of virtual experience model:
+\begin{itemize}
+	\item The \textit{locus of attention} axis represents the environment where the stimuli that the user is perceiving originate from.
+	\item The \textit{focus of attention} axis represents the balance between conceptual/abstract reasoning and perceptual/concrete processing, where complex conceptual reasoning (or `distraction' from percepts~\cite{Chalmers2014}) results in little attention being paid to processing environmental percepts (whether originating from real stimuli, virtual stimuli, or a mix) thus reducing presence\presencefootnote{} in that environment toward its antithesis $-$ absence\absencefootnote{}.
+	\item The \textit{sensus of attention} axis represents the level of conscious arousal (or `wakefulness'~\cite{Laureys2009}) of the user, whether directed toward percepts originating from real stimuli, virtual stimuli, a mix of both, or not directed toward any percepts in the case of completely `absent' conceptual reasoning, a concept clarified by the authors:
 
 \begin{quote}
 	\textit{``Presence arises from active awareness of our embodiment in a present world around us. Presence is not consciousness, and we may be highly conscious while feeling absent, at those times when we are relatively unaware of our own embodiment.''}~\cite{Waterworth2014}
 \end{quote}
+\end{itemize}
 
 In this model, the notion of involvement relates closely to the focus of attention axis; heightened involvement pertains to concentrating on environmental stimuli or meaningfully related activities and events, while heightened focus pertains to increased perceptual/concrete processing; lessened involvement pertains to a preoccupation with personal problems or activities occurring outwith the environment of interest, while lessened focus pertains to increased conceptual/abstract reasoning.
 
