--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -43,14 +43,14 @@ Previously when immersive VR has been employed in virtual heritage scenarios it 
 
 With the promise of high performance VR HMDs at a consumer price point on the horizon, thanks largely to the rejuvenation in the field effected by Oculus, their use at cultural heritage sites for achieving similar experiences to previous CAVE installations is becoming more plausible and brings with it certain benefits such as a reduction in the physical space required at the site for the installation. The OVW group's experience with presenting both experts and the general public with virtual heritage content via Oculus HMDs (see section \ref{virtual-heritage-at-st-andrews}) has been very promising. These interactions have taken place in scenarios similar to those of existing cultural heritage CAVE scenarios; the user remains physically stationary and uses a controller or gestures to move their virtual presence throughout the VR environment, whilst unable to observe the RW environment due to the nature of the HMD isolating them from RW visual stimuli.
 
-In this first stage of the evaluation a comparison was made between this seated style of interaction with VR content at a cultural heritage site wherein VR is experienced in isolation from RW, with both temporal and spatial separation, and a parallel reality style of interaction afforded by the Mirrorshades parallel reality platform, in which VR is experienced in tandem with RW by allowing the user to move around the RW environment and freely transition at any time into seeing the VR environment from the equivalent vantage point. Participants in this stage of the evaluation thus completed two scenarios wherein they interacted with the RW St Salvator's chapel and its corresponding VR reconstruction:
+In this first stage of the evaluation a comparison was made between this stationary style of interaction with VR content at a cultural heritage site wherein VR is experienced in isolation from RW, with both temporal and spatial separation, and a parallel reality style of interaction afforded by the Mirrorshades parallel reality platform, in which VR is experienced in tandem with RW by allowing the user to move around the RW environment and freely transition at any time into seeing the VR environment from the equivalent vantage point. Participants in this stage of the evaluation thus completed two scenarios wherein they interacted with the RW St Salvator's chapel and its corresponding VR reconstruction:
 
 \begin{enumerate}
 	\item \textbf{Seated VR scenario} - Participants experienced the RW and VR chapels separately. They navigated the VR chapel from a seated position, as VR has already come to be employed at cultural heritage sites via CAVE installations and by the OVW group with Oculus HMDs, using the Xbox controller to move around the VR environment observed via the DK1 which obscured their view of the RW chapel around them. Subsequently they navigated the RW chapel without the DK1 or any associated equipment, in order to pay comparison between it and the VR environment they had just experienced.
 	\item \textbf{Parallel reality scenario} - Participants experienced the RW and VR chapels in tandem using the Mirrorshades platform. They wore the DK1, held the Xbox controller in their right hand and the smartphone in their left, with the laptop and control box bundle in a satchel worn over one shoulder (see figure \ref{participant-f.jpg}). Pressing and holding a button on the Xbox controller triggered a transition from RW visual stimuli to VR visual displayed by the DK1.
 \end{enumerate}
 
-This first stage of evaluation was designed to ascertain whether applying parallel reality to a cultural heritage scenario resulted in an improvement in participant engagement and understanding of the relationships between the RW and VR environments compared to a seated VR cultural heritage scenario. Improvements were expected to arise from addressing the problems of spatial and temporal separation inherent with a seated VR scenario by imparting upon the participant the ability to freely transition with no delay between equivalent vantage points within the RW and VR environments.
+Thus in addition to simply assessing the feasibility of the concept, this first stage of evaluation was designed to ascertain whether applying parallel reality to a cultural heritage scenario resulted in an improvement in participant engagement and understanding of the relationships between the RW and VR environments compared to a traditional seated VR cultural heritage scenario. Improvements were expected to arise from addressing the problems of spatial and temporal separation inherent with a seated VR scenario by imparting upon the participant the ability to freely transition with no delay between equivalent vantage points within the RW and VR environments.
 
 %=========================================================================================================
 
@@ -155,6 +155,10 @@ A total of 6 participants completed the stage 1 evaluation:
 	\item None had previously experienced the virtual chapel.
 \end{itemize}
 
+Due to the small sample size and its skewed age group the observations drawn from these results should be primarily considered in terms of initial evidence that justifies and informs more detailed future work. Combined with the fact that evaluation was weighted more toward assessing the feasibility of the parallel reality concept, and its worth compared to previous alternate reality applications within cultural heritage, than toward making accurate recommendations about specifics of implementations, these observations lead to the set of abstract, high level best practices for future parallel reality endeavours enumerated in section \ref{best-practices-for-parallel-reality}, rather than leading to strict and infallible claims as to the nature of the parallel reality concept and its implementation. However in reference to the age group it is interesting to consider the observation, noted in section \ref{virtual-heritage}, that younger visitors to cultural heritage sites often experience less arousal at sites where the former splendour is no longer visible, which may mean that they have more to gain from an application of parallel reality to cultural heritage than other age groups.
+
+Original data are not reproduced within this thesis due to size constraints and the ethical agreement under which the evaluations were performed, however these data (including interview transcripts) can be made available by contacting the author.
+
 %=========================================================================================================
 
 \subsection{SUS}
@@ -189,7 +193,7 @@ Participants indicated that they generally found the parallel reality scenario t
 
 The visual quality of the headset was perceived as being worse in the parallel reality scenario (q11). Whilst the visual quality of the VR visuals was identical in both scenarios, this result is presumably because during the parallel reality scenario the participants were viewing the RW environment upon the DK1's screen via the cameras, with much lower visual acuity than in the seated VR scenario where they observed the RW environment unmediated when subsequently walking through the chapel without the DK1 (see discussion in section \ref{constraints_of_dk1_see_through_solution}).
 
-It is worth noting that although the parallel reality scenario scored lower than the seated VR scenario in SUS, both scenarios scored similarly high in question 2 (\textit{``It was easy to compare features from the past and the present''}) and similarly low in question 8 (\textit{``I think would have preferred a conventional computer monitor''}) of the Likert-type questionnaire, indicating that the diminished usability of the parallel reality scenario did not pose a drastic hindrance to the experience overall.
+It is worth noting that although the parallel reality scenario scored lower than the seated VR scenario in SUS, both scenarios scored similarly high in question 2 (\textit{``It was easy to compare features from the past and the present''}) and similarly low in question 8 (\textit{``I think I would have preferred a conventional computer monitor''}) of the Likert-type questionnaire, indicating that the diminished usability of the parallel reality scenario did not pose a drastic hindrance to the experience overall.
 
 %=========================================================================================================
 
@@ -203,7 +207,7 @@ Those that preferred the parallel reality scenario alluded to the immediacy of c
 
 The quality of the cameras was mentioned negatively by one participant who answered that the seated VR scenario made it easier to spot differences between RW and VR, with another participant specifically mentioning that a higher \textit{``resolution''} was needed.
 
-The one participant to report experiencing motion sickness elaborated that it was worse when using the DK1 in the seated VR scenario than when walking with the DK1 in the parallel reality scenario, because \textit{``sitting down and moving around feels weird''}. This was a reference to moving throughout the VR environment using the Xbox controller whilst remaining physically stationary by sitting on the chair. John Carmack, the CTO of Oculus VR, went as far as to say that \textit{``Stick yaw control is such VR poison that removing it may be the right move -- swivel chair/stand or don't play.''}\footnote{\url{https://twitter.com/id_aa_carmack/status/553238861267353600}}. This observation demonstrates the negative effect that a conflict between proprioception and visual perception in a VR experience can have (see discussion in section \ref{presence-questionnaires}).
+The one participant to report experiencing motion sickness elaborated that it was worse when using the DK1 in the seated VR scenario than when walking with the DK1 in the parallel reality scenario, because \textit{``sitting down and moving around feels weird''}. This was a reference to moving throughout the VR environment using the Xbox controller whilst remaining physically stationary by sitting on the chair. John Carmack, the CTO of Oculus VR, went as far as to say that \textit{``Stick yaw control is such VR poison that removing it may be the right move -- swivel chair/stand or don't play.''}\footnote{\url{https://twitter.com/id_aa_carmack/status/553238861267353600}}. This observation demonstrates the negative effect that a conflict between proprioception (our ability to sense the relative positions of our body parts) and visual perception in a VR experience can have (see discussion in section \ref{presence-questionnaires}).
 
 With regards to movement in the parallel reality scenario the accuracy, but more critically the lag, of the indoor positioning was cited by one participant as needing work, because it \textit{``caught me off guard twice''}. From watching the ShadowPlay recorded videos from the parallel reality scenario it is clear that in some cases the participants would trigger a transition to VR visual stimuli only to find that their VR position had not yet `caught up' with their RW position. This behaviour caused by the lag in IPS data was foreseen when considering the update frequency requirement of the IPS provision for the Mirrorshades platform (see section \ref{ips-requirements-for-mirrorshades}) however it was not expected to have as detrimental an effect as was expressed by some participants in the interviews.
 
@@ -506,13 +510,15 @@ Additionally the positional and orientational accuracy were for the most part ev
 
 \section{Summary}
 
-This first stage of evaluation directly compared a seated VR scenario, in which VR content has already come to be used at cultural heritage sites, against the mobile style of interaction afforded by the Mirrorshades parallel reality platform which addresses both temporal and spatial separation between experience of real and virtual environments. The Mirrorshades platform has shown itself to be a rewarding new modality for experiencing VR content in a cultural heritage context, improving upon seated VR techniques employed for the presentation of the same content, by allowing immediate comparison and contrast between corresponding vantage points in both the RW and VR environments, successfully addressing the hindrance of on-site comparison of real and virtual environments inherent to stationary virtual experiences.
+This first stage of evaluation directly compared a seated VR scenario, in which VR content has already come to be used at cultural heritage sites, against the mobile style of interaction afforded by the Mirrorshades parallel reality platform which addresses both temporal and spatial separation between experience of real and virtual environments. This evaluation has assessed the feasibility of the Mirrorshades platform with positive outcome and shown it to be a rewarding new modality for experiencing VR content in a cultural heritage context, improving upon seated VR techniques employed for the presentation of the same content, by allowing immediate comparison and contrast between corresponding vantage points in both the RW and VR environments, successfully addressing the hindrance of on-site comparison of real and virtual environments inherent to stationary virtual experiences.
 
-The accuracy of position and orientation data throughout the evaluations was sufficient to fully realise the freeform exploration scenario from section \ref{parallel-reality-in-virtual-heritage} even in the confines of an indoor environment, and additionally accuracy was for the most part sufficient for the freeform exploration with detailed comparison scenario. The immersive nature of the visuals produced by the Oculus Rift DK1 HMD, completely filling the user's FOV with stimuli from its screen, allowed for the experiential aspect of switching between real and virtual environments envisioned by the parallel reality paradigm to be truly accomplished by these scenarios.
+The accuracy of position and orientation data throughout the evaluations was sufficient to fully realise the freeform exploration scenario from section \ref{parallel-reality-in-virtual-heritage} even in the confines of an indoor environment, and furthermore accuracy was for the most part sufficient for the freeform exploration with detailed comparison scenario. The immersive nature of the visuals produced by the Oculus Rift DK1 HMD, completely filling the user's FOV with stimuli from its screen, allowed for the experiential aspect of switching between real and virtual environments envisioned by the parallel reality paradigm to be truly accomplished by these scenarios.
 
-Through questionnaire data and interview transcripts participants reported that overall they found the parallel reality scenario to be both more enjoyable and more rewarding than the seated VR scenario, despite the decreased usability and comfort effected by the requirement to don and carry a satchel of hardware and hold devices in both hands. The parallel reality scenario was reported as allowing easier comparison and contrast between RW and VR environments, leading participants to recognise more differences between the two environments and leading to greater learning and understanding of the chapel than with the seated VR scenario. Combined with reports of promoting greater awareness of both environments these responses indicate that the parallel reality scenario was successful in mitigating the vacancy problem. The visual acuity afforded by the cameras and the lag of the IPS surfaced as the major detractors to the experience of the parallel reality scenario.
+Through questionnaire data and interview transcripts participants reported that overall they found the parallel reality scenario to be both more enjoyable and more rewarding than the seated VR scenario, despite the decreased usability and comfort effected by the requirement to don and carry a satchel of hardware and hold devices in both hands. The parallel reality scenario was reported as allowing easier comparison and contrast between RW and VR environments, leading participants to recognise more differences between the two environments and leading to greater learning and understanding of the chapel than with the seated VR scenario. Combined with reports of promoting greater awareness of both environments these responses indicate that the parallel reality scenario was successful in mitigating the vacancy problem.
 
 Log data showed participants displaying restricted head movement throughout the parallel reality scenario, looking to their sides and above and beneath themselves less when experiencing the VR chapel in the parallel reality scenario than when experiencing the VR chapel in the seated VR scenario. While this restriction does not appear to have been so great that it reduced the utility and enjoyability of the parallel reality scenario to beneath that of the seated VR scenario, it has been observed by prior investigations~\cite{Slater1998} that there is a significant positive association between reported sense of presence in a VR environment and the amount of body movement, particularly head yaw, displayed by a participant. Furthermore, reducing the negative impact that a parallel reality system has upon a user's willingness to freely look around them will result in beneficial returns, especially when considering that restricted head movement may lead to overlooking interesting aspects of \textit{both} environments, not just the VR one.
+
+Criticisms of the experience were primarily levelled at aspects of the system that were constrained by hardware limitations, rather than at conceptual aspects of the experience. The visual acuity of the RW environment afforded by the cameras during the parallel reality scenario, which was substantially poorer than unmediated eyesight during the seated VR scenario, was one prominent complaint while the lag of the IPS surfaced as a major detractor to enjoyment of the experience even though its accuracy was high.
 
 %=========================================================================================================
 %=========================================================================================================
@@ -565,7 +571,7 @@ Stage 2 participants completed the same pre-task questionnaire as stage 1 partic
 
 As presence does not have a single widely agreed upon definition and those definitions that are commonly used are subjective in nature due to the fact that presence (whether in physical or virtual environments) is perceptual~\cite{Waterworth2014}, attempts to quantify or `measure' the experience of presence are met with difficulty. Many different approaches have been adopted, some of which are more or less suitable to certain scenarios than others. These approaches can be broadly categorised as either subjective (most commonly post task questionnaires), behavioural (measurement/observation of actions that do not stem from conscious thought) or physiological (heart rate, skin conductance, etc.)~\cite{Insko2003}.
 
-Under these categories one can consider the log data recorded by the Mirrorshades platform to provide a behavioural insight into the participants' sense of presence and the interview and Likert-type questionnaires to provide a subjective insight. For this second stage of evaluation where direct comparisons were made between different styles of transition in hopes to ascertain which resulted in less pronounced breaks in presence, the use of an established presence questionnaire was deemed a prudent addition to the evaluation techniques in order to inquire more directly about this aspect of the experience and to do so in a standardised fashion.
+Under these categories one can consider the log data recorded by the Mirrorshades platform to provide a behavioural insight into the participants' sense of presence and the interview and Likert-type questionnaires to provide a subjective insight. This second stage of evaluation elicited direct comparisons between different styles of transition, in hopes of ascertaining which resulted in less pronounced breaks in presence in terms of the extended vacancy problem. As such the use of an established presence questionnaire was deemed a prudent addition to the evaluation techniques, in order to inquire more directly about this aspect of the experience and to do so in a standardised fashion.
 
 %=========================================================================================================
 
@@ -1608,7 +1614,7 @@ However it is worth considering that while a default view that presents \textles
 %=========================================================================================================
 
 \section{Best Practices for Parallel Reality}
-
+\label{best-practices-for-parallel-reality}
 The evaluations described in this and the preceding chapters have experimentally shown the value of the Mirrorshades platform and parallel reality in general as a new modality for the tandem exploration of real and virtual environments within the context of a cultural heritage site, as well as revealing a number of indicators toward best practices for future implementations of parallel reality. With the merit of the platform compared to a seated VR experience established by the stage 1 evaluation, the stage 2.1 and 2.2 evaluations explored different implementation details of the platform to inform the future development of similar systems, to allow the benefits promised by the concept to be best achieved.
 
 Stage 2.1 assessed participant responses to several different styles of performing transitions between the constituent RW and VR environments, with a transition which furnished participants with complete control over the percentage of the visual stimuli of each environment that were presented to them emerging the clear favourite. The introduction of brief automatic transitions from RW to VR was met negatively when assessed in terms of enjoyment and preference, but positively when assessed in terms of awareness and understanding of the relationship between the two environments.
