--- a/01_introduction/introduction.tex
+++ b/01_introduction/introduction.tex
@@ -77,7 +77,7 @@ The design and development of a new alternate reality concept required thorough 
 
 %Parallel reality aims to further address the vacancy problem, originally coined by Joshua Lifton, by allowing users to switch freely between equivalent vantage points in two complete environments, one real and the other virtual. While the cross reality systems developed by Lifton succeeded in addressing the `absence' of a person from one environment while participating in the other by introducing changes into one environment based upon triggers in the other, the ability to visually engage with both environments in the true sense of being \textit{``in more than one place (reality) at a time''} was missing from these systems.
 
-The approach taken by this body of research was first to develop a well defined taxonomy of existing alternate reality definitions, in order to correctly situate the new category of parallel reality against them and to inform its design and implementation from the findings and adopted best practices produced by prior alternate reality investigation. This process, which is covered by chapter \ref{chapter-background}, involved effecting updates to several previously established models and creating the combined Milgram/Waterworth model to sufficiently illustrate and understand the experiential aspect of the proposed parallel reality concept.
+The approach taken by this body of research was first to develop a well defined taxonomy of existing alternate reality definitions, in order to correctly situate the new category of parallel reality against them and to inform its design and implementation from the findings and adopted best practices produced by prior alternate reality investigation. This process, which is covered by chapter \ref{chapter-background}, involved effecting updates to several previously established models and creating the combined Milgram/Waterworth model (as explained in section \ref{combined-milgram-waterworth-model}) to sufficiently illustrate and understand the experiential aspect of the proposed parallel reality concept.
 
 The \textit{merit} of the parallel reality concept, however, could not be assessed through such purely theoretical means. While one could have postulated as to the experiential aspects of such a system and how they would manifest during particular tasks and scenarios, it was only through actual creation and application of a parallel reality platform that such postulations could be corroborated or refuted. Thus after the establishment of a strong theoretical foundation of alternate reality taxonomy and experience, an approach of practice-based research, specifically `research through practice'~\cite{Chynoweth2014}, was adopted in order to develop a parallel reality system which could be applied to real world user studies to allow collection and subsequent evaluation of empirical evidence.
 
@@ -113,7 +113,7 @@ In summary the fundamental research objectives addressed by this thesis were to:
 
 \section{Collaborations and Publications}
 \label{collaborations-and-publications}
-While the work presented in this thesis was undertaken principally by myself, it would not have been possible were it not for collaboration. In particular the virtual reconstructions of St Andrews cathedral and St Salvator's chapel, that played a crucial role in the Virtual Time Window and Mirrorshades projects respectively, were created by the members of the Open Virtual Worlds research group working in collaboration with academics from the university's Art History, History and Archaeology departments, as well as with domain experts from heritage organisations including Historic Scotland and the National Trust for Scotland. Particular recognition should go to Sarah Kennedy for her critical role of modelling the reconstructions, Iain Oliver for his systems administration and for providing a Unity\footnote{\url{https://unity3d.com/}} version of the OpenSim chapel reconstruction via a tool of his own authoring, and Richard Fawcett with the School of Art History for his invaluable input to these reconstruction processes. Additionally the Unity model of the Jack Cole department building, that played a crucial role in the development and early testing of the Mirrorshades platform, was created by Alex Field.
+While the work presented in this thesis was undertaken principally by myself, it would not have been possible were it not for collaboration. In particular the virtual reconstructions of St Andrews cathedral and St Salvator's chapel, that played a crucial role in the Virtual Time Window and Mirrorshades projects respectively, were created by the members of the Open Virtual Worlds research group working in collaboration with academics from the university's Art History, History and Archaeology departments, as well as with domain experts from heritage organisations including Historic Scotland and the National Trust for Scotland. Particular recognition should go to Sarah Kennedy for her critical role of modelling the reconstructions, Iain Oliver for his systems administration and for providing a Unity\footnote{\url{https://unity3d.com/}} compatible conversion of the OpenSim chapel reconstruction via a tool of his own authoring, and Richard Fawcett with the School of Art History for his invaluable input to these reconstruction processes. Additionally the Unity model of the Jack Cole department building, that played a crucial role in the development and early testing of the Mirrorshades platform, was created by Alex Field.
 
 All other work introduced by this thesis was undertaken by the author.
 
