--- a/05_mirrorshades_design_implementation/mirrorshades_design_implementation.tex
+++ b/05_mirrorshades_design_implementation/mirrorshades_design_implementation.tex
@@ -24,7 +24,7 @@ This chapter discusses the design and development of a parallel reality platform
 %With a display technology such as an immersive VR HMD however, 
 
 \section{Overview}
-The development of the VTW platform as a preliminary foray into applying the concept of parallel reality to the field of cultural heritage and investigating the suitability of a familiar modality of alternate reality for  this purpose performed sufficiently to implement the static viewpoint scenario described in section \ref{parallel-reality-in-virtual-heritage}, wherein the viewpoints are spaced further apart than the worst case accuracy of the GPS solution, and to partly explore the freeform exploration scenario for expansive outdoor cultural heritage sites, in which visitors view artefacts within the environments from some distance from where the inaccuracy of positioning is not apparent. However along with the inability of the platform to fully realise the second scenario or to achieve any aspect of the third scenario, the performance and the experiential aspect of the platform also left much room for improvement.
+The development of the VTW platform as a preliminary foray into applying the concept of parallel reality to the field of cultural heritage and investigating the suitability of a familiar modality of alternate reality for  this purpose performed sufficiently to implement the static viewpoint scenario described in section \ref{parallel-reality-in-virtual-heritage}, wherein the viewpoints are spaced further apart than the worst case accuracy of the GPS solution, and to partly explore the freeform exploration scenario for expansive outdoor cultural heritage sites, in which visitors view artefacts within the environments from some distance from where the inaccuracy of positioning is not apparent. However along with the inability of the platform to fully realise the second scenario or to achieve any aspect of the third scenario from section \ref{parallel-reality-in-virtual-heritage}, the performance and the experiential aspect of the platform also left much room for improvement.
 
 Using cultural heritage as a real world case study once more, the Mirrorshades platform described in this chapter addressed these shortcomings as outlined in table \ref{influence-factors-mirrorshades-table}, which can be referenced against table \ref{influence-factors-vtw-table} from the previous chapter (section \ref{influence-factors-vtw-chapter}).
 
@@ -167,7 +167,7 @@ The OVW group took delivery of an Oculus Rift DK1 from the first batch of units 
 
 At this early stage after the DK1's release, the best supported software platform in terms of API provision and integration was the Unity game engine. After experience with modifying the Second Life client as part of the VTW project, it was decided best to convert the OVW group's OpenSim model of St Salvator's chapel into a Unity compatible format rather than embarking upon further modification to the Second Life client to support the DK1. Since the development of VTW the OVW group successfully engineered an automated process for converting OpenSim content into Unity compatible content, allowing the group's existing content, such as the chapel model, to be deployed within Unity executables.
 
-One deciding factor in opting to convert OpenSim content to Unity rather than use the content in its original OpenSim setting was the more stringent performance requirements for an enjoyable VR HMD experience compared to those of a traditional desktop/handhend display experience. When using a HMD such as the DK1, a smooth, high framerate is required to avoid a kind of motion sickness referred to as `simulator sickness'. Oculus' official guidelines are for Rift applications to \textit{``run at a frame rate equal to or greater than the Rift display refresh rate''}\footnote{\url{http://static.oculus.com/sdk-downloads/documents/Oculus_Best_Practices_Guide.pdf}} which in the case of the DK1 is 60Hz. Due to the possibly ephemeral nature of Second Life/OpenSim content where users are free to create, modify and destroy content in real time, Second Life as a 3D platform suffers in terms of performance compared to game engines such as Unity due to not being able to exploit techniques such as occlusion culling~\cite{willmott:largecomplex} which require an offline processing phase that depends upon environmental content remaining unchanged throughout deployment. The OVW group's experience in presenting Second Life/OpenSim content on a range of different hardware did not point to good odds of managing to render the St Salvator's chapel scene at close to 60fps, especially considering the overhead introduced by stereoscopic rendering even where the total resolution of the two side-by-side images is no greater than the single equivalent monoscopic image. As Mirrorshades is a mobile application and the computer producing the visuals was to be carried by the user, the hardware specification of this client were limited compared to those that the group had used in alternative static deployments.
+One deciding factor in opting to convert OpenSim content to Unity rather than use the content in its original OpenSim setting was the more stringent performance requirements for an enjoyable VR HMD experience compared to those of a traditional desktop/handhend display experience. When using a HMD such as the DK1, a smooth, high framerate is required to avoid a kind of motion sickness referred to as `simulator sickness'. Oculus' official guidelines are for Rift applications to \textit{``run at a frame rate equal to or greater than the Rift display refresh rate''}\footnote{\url{http://static.oculus.com/sdk-downloads/documents/Oculus_Best_Practices_Guide.pdf}} which in the case of the DK1 is 60Hz. Due to the possibly ephemeral nature of Second Life/OpenSim content where users are free to create, modify and destroy content in real time, Second Life as a 3D platform suffers in terms of performance compared to game engines such as Unity due to not being able to exploit techniques such as occlusion culling~\cite{willmott:largecomplex}, which prevents content that is not visible to the user from being rendered by the graphics hardware but requires an offline processing phase that depends upon environmental content remaining unchanged throughout deployment. The OVW group's experience in presenting Second Life/OpenSim content on a range of different hardware did not point to good odds of managing to render the St Salvator's chapel scene at close to 60fps, especially considering the overhead introduced by stereoscopic rendering even where the total resolution of the two side-by-side images is no greater than the single equivalent monoscopic image. As Mirrorshades is a mobile application and the computer producing the visuals was to be carried by the user, the hardware specification of this client were limited compared to those that the group had used in alternative static deployments.
 
 %=========================================================================================================
 
@@ -404,7 +404,7 @@ Due to the fact that depth of field of an image captured by a camera system incr
 
 With regards to convergence, when viewing an object in the real world the eyes rotate such that the perpendicular axes that bisect each eye converge at the point that one is looking at. This results in disparity between the images produced by each eye, as each sees the object from a different angle due to the physical distance between the eyes. This disparity leads to stereopsis, which is one of the contributing factors that leads to our ability to perceive depth. Oculus exploit this situation with their HMDs, by presenting a slightly different image to each eye, allowing virtual objects to appear at varying distances behind or in front of the virtual display.
 
-For a stereo camera solution however, the convergence between the cameras is fixed, unless one were to implement a complex system employing eye tracking to dynamically physically reorient the cameras to match the orientation of the eyes. Thus one can either chose to mount the cameras parallel to each other such that their optical axes never converge/converge at infinity, or to fix them `toed-in' such that they converge at a non infinite distance.
+For a stereo camera solution however, the convergence between the cameras is fixed, unless one were to implement a complex system employing eye tracking to dynamically physically reorient the cameras to match the orientation of the eyes. Thus one can either chose to mount the cameras parallel to each other such that their optical axes never converge/converge at infinity, or to fix them `toed-in' (pointing slightly inwards) such that they converge at a non infinite distance.
 
 With parallel cameras, any object captured by the cameras at infinity will be cast to the surface of the virtual screen. However any object captured by the cameras closer than infinity will be cast in front of the virtual screen with negative parallax. Viewing an entire scene in this manner is uncomfortable and should be avoided. With toed-in cameras, objects beyond the convergence point will be rendered with positive parallax and will appear to be behind the virtual screen, whilst objects closer than the convergence point will be rendered with negative parallax and will appear to be in front of the virtual screen. This is much more comfortable than a parallel camera approach.
 
@@ -842,7 +842,7 @@ The first test in St Salvator's chapel (a video of which can be viewed online\fo
 
 \newpage
 
-Testing then took place with members of the Open Virtual Worlds research group (a video of which can be viewed online\footnote{\url{https://www.youtube.com/watch?v=pvGV5dCjt4U}}) as seen in figures \ref{testing-vids-screenshots/sallies-second-1.png} to \ref{testing-vids-screenshots/sallies-second-8.png}. These tests provided initial feedback from participants not directly involved with development of the platform. During these early tests there was a strong preference expressed from the participants toward the transition with linear interpolation (see section \ref{transition-with-linear-interpolation}).
+Testing then took place with members of the Open Virtual Worlds research group (a video of which can be viewed online\footnote{\url{https://www.youtube.com/watch?v=pvGV5dCjt4U}}) as seen in figures \ref{testing-vids-screenshots/sallies-second-1.png} to \ref{testing-vids-screenshots/sallies-second-8.png}. These figures are composites showing three vantages captured at the same time index: top left of each figure is the view recorded through the HMD (the same vantage as shown by figures \ref{testing-vids-screenshots/jc-1.png} to \ref{testing-vids-screenshots/sallies-first-2.png}) while bottom left and bottom right are views of the participant themselves. These tests provided initial feedback from participants not directly involved with development of the platform. During these early tests there was a strong preference expressed from the participants toward the transition with linear interpolation (see section \ref{transition-with-linear-interpolation}).
 
 \TwoFig{testing-vids-screenshots/sallies-second-1.png}{Mirrorshades test with OVW group members in St Salvator's chapel (composite, 1/4).}{testing-vids-screenshots/sallies-second-1.png}
        {testing-vids-screenshots/sallies-second-4.png}{Mirrorshades test with OVW group members in St Salvator's chapel (composite, 2/4).}{testing-vids-screenshots/sallies-second-4.png}
